<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world</string>
    <string name="title_activity_weekly_view">WeeklyViewActivity</string>
    <string name="title_activity_daily_view">DailyViewActivity</string>
    <string name="title_activity_monthly_view">MonthlyViewActivity</string>
    <string name="title_activity_agenda_view">Agenda List</string>
    <string name="title_activity_agenda_details">Agenda Details</string>
    <string name="title_activity_calendar">Calendar Activity</string>
    <string name="buttonNextWeekText">Next Week</string>
    <string name="buttonPreviousWeekText">Previous Week</string>
    <string name="description">Previous Week</string>

    <color name="gray">#d1d1d1</color>
    <color name="test">#F8F2E4</color>
    <color name="day">#fff7f9</color>
    <color name="list_focused">#36C170</color>
    <color name="list_selected">#9EC136</color>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event_description">Event Description</string>
    <string name="what">What</string>
    <string name="periodical">weekly repeating event?</string>
    <string name="weeks">Weeks</string>
    <string name="optional">Optional</string>
    <string name="category">Category</string>
    <string name="or">OR</string>
    <string name="new_category">New Category</string>
    <string name="number">5</string>
    <string name="title_activity_new_category">New Category</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="category_name">Name</string>
    <string name="name_hint">A simple one, such as Work</string>
    <string name="category_description">Description</string>
    <string name="description_hint">More information about the category</string>
    <string name="category_color">Color</string>
    <string name="create_event">create</string>
    <string name="remove_event">remove</string>
    <string name="update_event">update</string>
    <string name="create_category">Create Category</string>
    <string name="cancel">return</string>
    <string name="title_activity_modify_event">Modify Event</string>
    <string name="title_activity_modify_category">Delete Category</string>
    <string name="time_conflict">event time conflict</string>
    <string name="invalid_input">invalid user input</string>
    <string name="incomplte_input">incomplete user input</string>
    <string name="name_is_taken">category name is taken</string>
    <string name="select_category_to_delete">select category to delete</string>
    <string name="info">No category to delete</string>
    <string name="delete">delete</string>
    <string name="prompt">please select category</string>
    <string name="title_activity_agenda_by_cateogry">Agenda View Options</string>
    <string name="agenda_category">View Agenda</string>
    <string name="agenda_date">View Agenda</string>
    <string name="title_activity_agenda_by_date">AgendaByDateActivity</string>

</resources>